# light_sensor

./: Cargo.toml  README.md
.cargo/: config
case/: Hinged_Box.scad  Hinged_Box.stl
src/: main.rs
